rollback for debugging

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
 name: codecov
 on:
   pull_request:
-    types:
-      - opened
-      - ready_for_review
+    # types:
+    #   - opened
+    #   - ready_for_review
 
 jobs:
   run-codecov:
