--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -9,5 +9,6 @@ jobs:
       - uses: actions/checkout@v2
       - run:
         npm install prettier@3.0.3
+      - run:
         npx prettier --check
       
