--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -8,5 +8,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run:
-        npx prettier@3.0.3 prettier --check
+        npx prettier@3.0.3 --check
       
