--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -7,6 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "20"
       - run:
         npx prettier --check
       
